# XXLog

./: .gitignore  README.md  build.gradle  buildaar.sh  deploy.sh  gradle.properties  internal_dep.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/luoxuwei/xxlog/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: publish.gradle
gradle/wrapper/: gradle-wrapper.properties
xxlog/: build.gradle  gradle.properties
xxlog/src/main/: AndroidManifest.xml
xxlog/src/main/cpp/: CMakeLists.txt  config.h  formater.cc  log_base_buffer.cc  log_base_buffer.h  log_file.cc  log_file.h  log_zlib_buffer.cc  log_zlib_buffer.h  logger.cc  logger.h  native-lib.cc  native-lib.cpp  xxlogger_appender.cc  xxlogger_appender.h
xxlog/src/main/cpp/crypt/: log_crypt.cc  log_crypt.h
xxlog/src/main/cpp/jni/: scoped_jstring.cc  scoped_jstring.h
xxlog/src/main/cpp/util/: autobuffer.cc  condition.cc  condition.h  count_down_latch.cc  count_down_latch.h  file_operations.cc  file_operations.h  log_util.cc  log_util.h  mutex.cc  mutex.h  singleton.h  strutil.cc  strutil.h  thread.cc  thread.h
xxlog/src/main/java/com/luoxuwei/xxlog/: Log.java  XXLog.java
